# Sistema-de-resultados-laboratorio

./: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs
src-tauri/src/commands/: auth.rs  export.rs  mod.rs  patients.rs  results.rs  samples.rs  users.rs
src/components/: add-sample-dialog.tsx  dashboard-sidebar-nav.tsx  exam-form.tsx  header.tsx  import-result-dialog.tsx  patient-edit-modal.tsx  patient-history-tab.tsx  patient-lookup-field.tsx  patient-register-modal.tsx  print-button.tsx  report-actions.tsx  report-footer.tsx  report-header.tsx  report-patient-info.tsx  report-performed-by.tsx  report-results.tsx  results-data-table.tsx  role-gate.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  sidebar.tsx  skeleton.tsx
src/hooks/: use-metrics.ts  use-patient-history.ts  use-role.ts
src/lib/: auth.tsx  db.ts  definitions.ts  exam-config.ts  field-labels.ts  logo.tsx  role-gate.tsx  route-titles.ts  toast-messages.ts
src/lib/forms/: bioquimico.json  deteccion-sangre-oculta.json  examen-general.json  foods.json  hemograma-completo.json  nino.json
src/pages/: AccountPage.tsx  AccountPasswordPage.tsx  DashboardPage.tsx  EditExamPage.tsx  FirstRunPage.tsx  LoginPage.tsx  MetricsPage.tsx  NewExamPage.tsx  ResultDetailPage.tsx  ResultsListPage.tsx  UsersPage.tsx
